// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataIterator.js should match a snapshot - footer slot 1`] = `

<div class="v-data-iterator">
  <div>
  </div>
  <div>
    <span>
      footer
    </span>
    <div class="v-data-iterator__actions">
      <div class="v-data-iterator__actions__select">
        Items per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-menu v-menu--inline">
                <div class="v-menu__activator">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">
                        5
                      </div>
                      <input aria-label="Items per page:"
                             readonly="readonly"
                             type="text"
                             autocomplete="on"
                             aria-readonly="false"
                      >
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append">
                        <i aria-hidden="true"
                           class="v-icon material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-menu__content v-menu__content--auto"
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card">
                    <div class="v-list">
                      <div>
                        <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-iterator__actions__range-controls">
        <div class="v-data-iterator__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - hideActions and no footer slot 1`] = `

<div class="v-data-iterator">
  <div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no data 1`] = `

<div class="v-data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No data available
    </div>
  </div>
  <div>
    <div class="v-data-iterator__actions">
      <div class="v-data-iterator__actions__select">
        Items per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-menu v-menu--inline">
                <div class="v-menu__activator">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">
                        5
                      </div>
                      <input aria-label="Items per page:"
                             readonly="readonly"
                             type="text"
                             autocomplete="on"
                             aria-readonly="false"
                      >
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append">
                        <i aria-hidden="true"
                           class="v-icon material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-menu__content v-menu__content--auto"
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card">
                    <div class="v-list">
                      <div>
                        <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-iterator__actions__range-controls">
        <div class="v-data-iterator__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no matching records 1`] = `

<div class="v-data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No matching records found
    </div>
  </div>
  <div>
    <div class="v-data-iterator__actions">
      <div class="v-data-iterator__actions__select">
        Items per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-menu v-menu--inline">
                <div class="v-menu__activator">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">
                        5
                      </div>
                      <input aria-label="Items per page:"
                             readonly="readonly"
                             type="text"
                             autocomplete="on"
                             aria-readonly="false"
                      >
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append">
                        <i aria-hidden="true"
                           class="v-icon material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-menu__content v-menu__content--auto"
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card">
                    <div class="v-list">
                      <div>
                        <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-iterator__actions__range-controls">
        <div class="v-data-iterator__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - with data 1`] = `

<div class="v-data-iterator">
  <span>
    <div>
      b
    </div>
    <div>
      c
    </div>
    <div>
      a
    </div>
  </span>
  <div>
    <div class="v-data-iterator__actions">
      <div class="v-data-iterator__actions__select">
        Items per page:
        <div role="combobox"
             class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty"
        >
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-menu v-menu--inline">
                <div class="v-menu__activator">
                  <div class="v-select__slot">
                    <div class="v-select__selections">
                      <div class="v-select__selection v-select__selection--comma">
                        5
                      </div>
                      <input aria-label="Items per page:"
                             readonly="readonly"
                             type="text"
                             autocomplete="on"
                             aria-readonly="false"
                      >
                    </div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append">
                        <i aria-hidden="true"
                           class="v-icon material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
                <div class="v-menu__content v-menu__content--auto"
                     style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
                >
                  <div class="v-select-list v-card">
                    <div class="v-list">
                      <div>
                        <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              5
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              10
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              25
                            </div>
                          </div>
                        </a>
                      </div>
                      <div>
                        <a class="v-list__tile v-list__tile--link">
                          <div class="v-list__tile__content">
                            <div class="v-list__tile__title">
                              All
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-iterator__actions__range-controls">
        <div class="v-data-iterator__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Previous page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
                aria-label="Next page"
        >
          <div class="v-btn__content">
            <i aria-hidden="true"
               class="v-icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - with data 2`] = `

<div class="v-data-iterator__actions__range-controls">
  <div class="v-data-iterator__actions__pagination">
    1-3 of 3
  </div>
  <button disabled="disabled"
          type="button"
          class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
          aria-label="Previous page"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        chevron_right
      </i>
    </div>
  </button>
  <button disabled="disabled"
          type="button"
          class="v-btn v-btn--disabled v-btn--flat v-btn--icon"
          aria-label="Next page"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        chevron_left
      </i>
    </div>
  </button>
</div>

`;
